--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^6.1.1",
     "astro": "^4.0.8",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
